2005-04-27  Alexey Shchepin  <alexey@sevcom.net>

	* contrib/extract_translations/: A tool for extracting of
	translation strings from ejabberd code (thanks to Sergei Golovan)

2005-04-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_vcard_ldap.erl: Bugfix (thanks to Mickael Remond)

2005-04-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web_admin.erl: Added translation to submit
	button and "shared roster groups" header (thanks to iceburn and
	Sergei Golovan)

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)
	* src/msgs/uk.msg: Likewise

	* src/mod_muc/mod_muc_room.erl: Minor update to simplify
	translation (thanks to Sergei Golovan)

	* src/tls/tls_drv.c: Reverted previous patch

2005-04-22  Alexey Shchepin  <alexey@sevcom.net>

	* doc/guide.tex: Added mod_shared_roster documentation

	* src/ejabberd.hrl: Updated version

2005-04-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/jd2ejd.erl: Bugfix

2005-04-20  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_auth.erl: Added check for domain of registered user

	* src/web/ejabberd_web_admin.erl: Fixed user registration via web
	interface, fixed path to user's offline messages (thanks to
	Mickael Remond)

	* src/mod_disco.erl: Fixed domain listing when one virtual host is
	a subdomain of another

2005-04-18  Alexey Shchepin  <alexey@sevcom.net>

	* (all): ejabberd-0.9 released

	* src/web/ejabberd_web_admin.erl: Added link to shared roster page

	* src/odbc/ejabberd_odbc.erl: ODBC connection string can be
	specified via odbc_server option now
	* src/ejabberd.cfg.example: Added ODBC usage example

	* doc/guide.tex: Updated

	* src/msgs/pl.msg: New Polish translation (thanks to Andrew Smyk)

2005-04-17  Alexey Shchepin  <alexey@sevcom.net>

	* (all): Merged virtual hosting support

2005-04-09  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Send new id for each new stream inside one
	session (thanks to Maxim Ryazanov)
